--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,6 @@ if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
     message(FATAL_ERROR "Only 64-bit builds supported.")
 endif()
 
-message(${CMAKE_C_COMPILER_ID})
-
 if (${CMAKE_C_COMPILER_ID} STREQUAL "GNU")
     set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -Werror")
 elseif(${CMAKE_C_COMPILER_ID} STREQUAL "Clang")
@@ -31,6 +29,9 @@ include_directories(src)
 set(vdd-src
     "src/main.cpp"
     "src/DuckDemoUtils.cpp"
+    "src/Game.cpp"
+    "src/GameTimer.cpp"
+    "src/DuckDemoGame.cpp"
 )
 
 include_directories(SYSTEM external/glm)
