Created MeshLoader Project
This project will be used to load mesh from disk or process model binary into a model using assimp.

Added a function to create the Cube Primitive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,3 +69,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/shaderc/libshaderc/incl
 target_link_libraries(VulkanDuckDemo shaderc)
 
 include_directories(VulkanDuckDemo ${CMAKE_CURRENT_SOURCE_DIR}/external/glm)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/MeshLoader)
+include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/external/MeshLoader/include)
+target_link_libraries(VulkanDuckDemo MeshLoader)
