Seperated MeshRenderPass into separate file.
- created concept of RenderObjects
- added ability to dynamically switch between wireframe and fill rendering
- imgui window can toggle wireframe mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ set(vdd-src
     "src/GameTimer.cpp"
     "src/DuckDemoGame.cpp"
     "src/ImGuiRenderPass.cpp"
+    "src/MeshRenderPass.cpp"
+    "src/VulkanBuffer.cpp"
+    "src/VulkanTexture.cpp"
 )
 
 include_directories(SYSTEM external/glm)
